testing/testcases/prototype/fail/ARM_Test10.adl
CONTEXT ARM_Test10 IN DUTCH -- (project ARMisa)
critText :: Criterium -> Blob
INTERFACE "Gewetensvraag" : I[Gewetensvraag]
BOX[ gewetensvragen: I[Gewetensvraag]
BOX[ gewetensvraag: I
, criterium : critText
]
]
ENDCONTEXT
